@@ -1,32 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2014/10/25 22:10:35 cheusov Exp $
-${PYSITELIB}/dateutil/__init__.py
-${PYSITELIB}/dateutil/__init__.pyc
-${PYSITELIB}/dateutil/__init__.pyo
-${PYSITELIB}/dateutil/easter.py
-${PYSITELIB}/dateutil/easter.pyc
-${PYSITELIB}/dateutil/easter.pyo
-${PYSITELIB}/dateutil/parser.py
-${PYSITELIB}/dateutil/parser.pyc
-${PYSITELIB}/dateutil/parser.pyo
-${PYSITELIB}/dateutil/relativedelta.py
-${PYSITELIB}/dateutil/relativedelta.pyc
-${PYSITELIB}/dateutil/relativedelta.pyo
-${PYSITELIB}/dateutil/rrule.py
-${PYSITELIB}/dateutil/rrule.pyc
-${PYSITELIB}/dateutil/rrule.pyo
-${PYSITELIB}/dateutil/tz.py
-${PYSITELIB}/dateutil/tz.pyc
-${PYSITELIB}/dateutil/tz.pyo
-${PYSITELIB}/dateutil/tzwin.py
-${PYSITELIB}/dateutil/tzwin.pyc
-${PYSITELIB}/dateutil/tzwin.pyo
-${PYSITELIB}/dateutil/zoneinfo/__init__.py
-${PYSITELIB}/dateutil/zoneinfo/__init__.pyc
-${PYSITELIB}/dateutil/zoneinfo/__init__.pyo
-${PYSITELIB}/dateutil/zoneinfo/zoneinfo--latest.tar.gz
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
