@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.2 2014/10/25 22:10:35 cheusov Exp $
-
-SHA1 (python-dateutil-2.2.tar.gz) = fbafcd19ea0082b3ecb17695b4cb46070181699f
-RMD160 (python-dateutil-2.2.tar.gz) = e72e546d762ffb3c2c952fcc77031352a9992b27
-Size (python-dateutil-2.2.tar.gz) = 259085 bytes
